# elxr-validation

./: .gitignore  .gitmodules  Dockerfile  README.md  device.yaml  init.tar  job.yaml  poetry.toml  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
elxr_validator/: ...  device.yaml  job.yaml
elxr_validator/lava/lava/dispatcher/: lava-run
elxr_validator/src/: main.py
src/: main.py
src/windriver/cli/elxr/: validator.py
